--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Arkiv Bookmarks</title>
 
   <link rel='stylesheet' href='/global.css'>
+  <link rel='stylesheet' href='/colors.css'>
   <link rel='stylesheet' href='/build/bundle.css'>
 
   <script defer src='/build/bundle.js'></script>
